language/move-compiler/tests/move_check/translate/name_access_chain_too_long.move
module M {
    friend 0x42::A::a::aa;
}
